--- a/templates/Q4.html
+++ b/templates/Q4.html
@@ -11,7 +11,9 @@
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Stay at home and wait for help">Stay at home and wait for help
         <br><br>
-        <input type ="radio" name="option" value = "Leave your home">Leave your home
+        <input type ="radio" name="option" value = "Find a weapon">Find a weapon
+        <br><br>
+        <input type ="radio" name="option" value = "Gather all the food and bottled waters">Gather all the food and bottled waters
         <br><br>
         <input type = 'submit' name='submitform' value = 'Next Question'>
     </form>
