--- a/templates/Q11.html
+++ b/templates/Q11.html
@@ -9,11 +9,13 @@
     <body>
     <p>{{prompt}}</p>
     <form action = "" method="post">
-        <input type ="radio" name="option" value = "Stay at home and wait for help">Stay at home and wait for help
+        <input type ="radio" name="option" value = "Collect Food and other resources">Collect Food and other resources
         <br><br>
-        <input type ="radio" name="option" value = "Find a weapon">Find a weapon
+        <input type ="radio" name="option" value = "Find a vehicle">Find a vehicle
         <br><br>
-        <input type ="radio" name="option" value = "Gather all the food and bottled waters">Gather all the food and bottled waters
+        <input type ="radio" name="option" value = "Look for shelter">Look for shelter
+        <br><br>
+        <input type ="radio" name="option" value = "Look for other survivors">Look for other survivors
         <br><br>
         <input type = 'submit' name='submitform' value = 'Next Question'>
     </form>
