--- a/templates/Q11.html
+++ b/templates/Q11.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q1</title>
+    <title>Q11</title>
 </head>
     <body>
     <p>{{prompt}}</p>
@@ -17,7 +17,7 @@
         <br><br>
         <input type ="radio" name="option" value = "Look for other survivors">Look for other survivors
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'Check the Result'>
     </form>
     </body>
 </html>
