--- a/templates/Q10.html
+++ b/templates/Q10.html
@@ -8,6 +8,7 @@
 </head>
     <body>
     <p>{{prompt}}</p>
+    <img src="/Photo.jpg"></img>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Direction 1">Direction 1
         <br><br>
