--- a/templates/Q2.html
+++ b/templates/Q2.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q2</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "22 minute trail cross a chuck of forest which will lead you to your backyard">22 minute trail cross a chuck of forest which will lead you to your backyard
         <br><br>
@@ -15,7 +19,8 @@
         <br><br>
         <input type ="radio" name="option" value = "18 minutes route that avoid most people, will pass the front door of your neighbors">18 minutes route that avoid most people, will pass the front door of your neighbors
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Submit'>
+        <input type = 'submit' name='submitform' value = 'OK. I decided to walk along this way.' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
