--- a/templates/Q9.html
+++ b/templates/Q9.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q9</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Living Room Window -> Frontyard -> Front Street">Living Room Window -> Frontyard -> Front Street
         <br><br>
@@ -17,7 +21,8 @@
         <br><br>
         <input type ="radio" name="option" value = "Kitchen Windor -> Backyard -> Back Street">Kitchen Windor -> Backyard -> Back Street
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'Go this way!' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
