--- a/templates/Result.html
+++ b/templates/Result.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q11</title>
+    <style>
+        h{font-size: 30px;}
+        button{color:blue;font-size: 23px;border-radius: 7px;}
+        </style>
 </head>
     <body>
-    <p>You Survived:</p>
-    <p>{{time}}</p>
-    <p>{{category}}</p>
+    <div style="margin:50px">
+    <br><br>
+    <br><br>
+    <h>You Survived:</h>
+    <h>{{time}}</h>
+    <br><br>
+    <h>{{category}}</h>
+    <br><br>
     <form action = "" method = "post">
-        <button>Try Again</button>
+        <div style="text-align:center;">
+        <button>Try Again</button></div>
         </form>
+    </div>
     </body>
 </html>
