--- a/templates/error.html
+++ b/templates/error.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
+    <style>
+        h{font-size: 30px;}
+        button{color:blue;font-size: 23px;border-radius: 7px;}
+        </style>
 </head>
     <body>
-    <p>Sorry, your bag can't fit that many items</p>
+    <div style="margin:50px">
+    <h>Sorry, your bag can't fit that many items</h>
+    <br><br>
     <form action = "" method = "post">
         <button>Repack your bag</button>
         </form>
+    </div>
     </body>
 </html>
