--- a/templates/Q1.html
+++ b/templates/Q1.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q1</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Try to seperate that gril and the person she is attacking">Try to seperate that gril and the person she is attacking
         <br><br>
@@ -17,7 +21,8 @@
         <br><br>
         <input type ="radio" name="option" value = "Call your families and ask them to stay away from the crowd">Call your families and ask them to stay away from the crowd
         <br><br>
-        <input type = 'submit' name='Q1form' value = 'Do this'>
+        <input type = 'submit' name='Q1form' value = 'Do this' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
