--- a/templates/Q11.html
+++ b/templates/Q11.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q11</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Collect Food and other resources">Collect Food and other resources
         <br><br>
@@ -17,7 +21,8 @@
         <br><br>
         <input type ="radio" name="option" value = "Look for other survivors">Look for other survivors
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Check the Result'>
+        <input type = 'submit' name='submitform' value = 'Check the Result' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
