--- a/templates/Q3.html
+++ b/templates/Q3.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q3</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Close all the doors and windows immediately">Close all the doors and windows immediately
         <br><br>
@@ -15,7 +19,8 @@
         <br><br>
         <input type ="radio" name="option" value = "Gather all the food and bottled waters">Gather all the food and bottled waters
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'This is my decision.' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
