--- a/templates/Q4.html
+++ b/templates/Q4.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q1</title>
+    <title>Q4</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Stay at home and wait for help">Stay at home and wait for help
         <br><br>
         <input type ="radio" name="option" value = "Leave your home">Leave your home
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'This is my decision.' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
