--- a/templates/Q5.html
+++ b/templates/Q5.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q5</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="checkbox" name="mycheckbox" value = "3 Bottles of water">3 Bottles of water
         <br><br>
@@ -25,7 +29,10 @@
         <br><br>
         <input type ="checkbox" name="mycheckbox" value = "A bottle of vodka">A bottle of vodka
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type ="checkbox" name="mycheckbox" value = "Map">Map
+        <br><br>
+        <input type = 'submit' name='submitform' value = 'I guess I should take them with me?' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
