--- a/templates/Q6.html
+++ b/templates/Q6.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q6</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="checkbox" name="mycheckbox" value = "Burn it">Burn it
         <br><br>
@@ -15,7 +19,8 @@
         <br><br>
         <input type ="checkbox" name="mycheckbox" value = "Use Salt">Use Salt
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = "Well. That is what I remembered." style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
