--- a/templates/Q7.html
+++ b/templates/Q7.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q6</title>
+    <title>Q7</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="checkbox" name="mycheckbox" value = "They walk slow">They walk slow
         <br><br>
@@ -21,7 +25,8 @@
         <br><br>
         <input type ="checkbox" name="mycheckbox" value = "They look different from human">They look different from human
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'hmmm.. Is that correct?' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
