--- a/templates/Q8.html
+++ b/templates/Q8.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q8</title>
+    <style>
+        h1{font-size: 20px;}
+        </style>
 </head>
     <body>
-    <p>{{prompt}}</p>
+    <div style="margin:50px">
+    <h1>{{prompt}}</h1>
     <form action = "" method="post">
         <input type ="radio" name="option" value = "Gun">Gun
         <br><br>
@@ -17,7 +21,8 @@
         <br><br>
         <input type ="radio" name="option" value = "Wrench">Wrench
         <br><br>
-        <input type = 'submit' name='submitform' value = 'Next Question'>
+        <input type = 'submit' name='submitform' value = 'I guess it will work?' style="font-size: 120px;color: red;">
     </form>
+    </div>
     </body>
 </html>
