--- a/templates/home.html
+++ b/templates/home.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=3.0">
     <title>Welcome to the zombie survival game</title>
+    <style> 
+        h1{color:red;text-align: center;}
+        button{color:blue;font-size: 40px;border-radius: 15px;}
+        </style>
 </head>
 <body>
-    <p>One day a zombie virus outbreak in your city, how long you can survive?</p>
+    <br><br>
+    <br><br>
+    <h1>A zombie virus outbreak in your city, how long you can survive?</h1>
+    <br><br>
     <form action = "" method = "post">
-    <button>Start</button>
+    <div style="text-align:center;">
+    <button>Start</button></div>
     </form>
 </body>
 </html>
