--- a/templates/Q8.html
+++ b/templates/Q8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q10</title>
+    <title>Q8</title>
     <style>
         h1{font-size: 20px;}
         </style>
@@ -12,17 +12,16 @@
     <body>
     <div style="margin:50px">
     <h1>{{prompt}}</h1>
-    <h1>{{map}}</h1>
     <form action = "" method="post">
-        <input type ="radio" name="option" value = "Direction 1">Direction 1
+        <input type ="radio" name="option" value = "Gun">Gun
         <br><br>
-        <input type ="radio" name="option" value = "Direction 2">Direction 2
+        <input type ="radio" name="option" value = "Chainsaw">Chainsaw
         <br><br>
-        <input type ="radio" name="option" value = "Direction 3">Direction 3
+        <input type ="radio" name="option" value = "Baseball Bat">Baseball Bat
         <br><br>
-        <input type ="radio" name="option" value = "Direction 4">Direction 4
+        <input type ="radio" name="option" value = "Wrench">Wrench
         <br><br>
-        <input type = 'submit' name='submitform' value = 'This should work.' style="font-size: 120px;color: red;">
+        <input type = 'submit' name='submitform' value = 'I guess it will work?' style="font-size:50px;color: red;">
     </form>
     </div>
     </body>
